# 2025-epistasis-dl-quantgen

./: .gitignore  CITATION.cff  README.md  run_snakemake_pipeline.sh
workflow_sims/gpatlas/: gpatlas_lite.ipynb  gpatlas_lite.py  gpatlas_lite_gg.py  gpatlas_lite_gg_reconstruction_eval.ipynb  gpatlas_lite_gg_reconstruction_eval.py  gpatlas_lite_gglocal_reconstruction_eval.ipynb  gpatlas_lite_gglocal_reconstruction_eval_V1.ipynb  gpatlas_lite_gp_gglocal.py  gpatlas_lite_localgg.py  gpatlas_lite_localgg_V1.py  gpatlas_lite_localgg_V2.py  gpatlas_lite_optuna_gg.ipynb  gpatlas_lite_optuna_gg.py  gpatlas_lite_optuna_gg_snakemake.py  gpatlas_lite_optuna_gp.py  gpatlas_lite_optuna_gp_snakemake.py  gpatlas_lite_pred_evaluate.ipynb  gpatlas_lite_pred_evaluate.py  gpatlas_lite_pred_evaluate_gglocal.ipynb  gpnet_null.py  optuna_analysis.ipynb  prep_data.py  prep_data_h5.py  pyproject.toml
workflow_sims/gpatlas/gplinear/: gp_combi.py  gplinear_kl.py  plot_prediction_corr.ipynb
workflow_sims/gpatlas/gpnet/: gpnet_null.py  plot_prediction_corr.ipynb
workflow_sims/gpatlas/learning_dynamics/: gpatlas_lite_gg_learn_dyn.py  plot_ldynamics.ipynb
workflow_sims/gpatlas/localgg/: gpatlas_lite_gglocal_gp_full.py  gpatlas_lite_gglocal_reconstruction_eval.ipynb  gpatlas_lite_gglocal_reconstruction_eval_V1.ipynb  gpatlas_lite_gglocal_reconstruction_eval_V2.ipynb  gpatlas_lite_gp_V2.py  gpatlas_lite_gp_gglocal.py  gpatlas_lite_gp_optuna.py  gpatlas_lite_localgg.py  gpatlas_lite_localgg_V1.py  gpatlas_lite_localgg_V1_optuna.py  gpatlas_lite_localgg_V2.py  gpatlas_lite_localgg_V3.py  (+1 more)
(+144 files in other folders)
